--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "verinin-mutfagi-website",
   "version": "1.0.0",
   "description": "Verinin Mutfağı - Data Analytics and Automation Company Website",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
